boulder/tests/error/module/repeat_path.bo
# Attribute `path` used more than once
# (4:
# (5:
@path(extern)
@path(extern)
mod extern;